大枠決定，プロフィール，業績，リンク，ゲームほぼ完成

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <script type="text/javascript" src="lib/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="lib/jquery.vgrid.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <!-- game.htmlで使用 -->
+	<script language="JavaScript" type="text/javascript" src="js/game.js"></script>
+	<script language="JavaScript" type="text/javascript" src="js/mayo1.js"></script>
+	<script language="JavaScript" type="text/javascript" src="js/mayo2.js"></script>
+	<script language="JavaScript" type="text/javascript" src="js/life.js"></script>
 
     <title>Commojun's web</title>
 </head>
@@ -23,23 +28,22 @@
 
   <div align="center">
 
-    <h1>Commojun's web</h1>
+    <h1 style="margin-top:0">Commojun's web</h1>
 
   </div><!-- center -->
 
   
   <div id="navi">
-    <div class="pointer welcome" data-id="welcome" data-menuButton>Welcome</div>
-    <div class="pointer profile" data-id="profile" data-menuButton>Profile</div>
-    <div class="pointer work" data-id="work" data-menuButton>Work</div>
-    <div class="pointer publication" data-id="publication" data-menuButton>Publication</div>
-    <div class="pointer contact" data-id="contact" data-menuButton>Contact</div>
-    <div class="pointer link" data-id="link" data-menuButton>Link</div>
-    <!-- <div class="pointer" data-id="game" data-menuButton>Game</div> -->
+    <div class="welcome" data-id="welcome" data-menuButton><div>Welcome</div></div>
+    <div class="profile" data-id="profile" data-menuButton><div>Profile</div></div>
+    <div class="work" data-id="work" data-menuButton><div>Work</div></div>
+    <div class="publication" data-id="publication" data-menuButton><div>Publication</div></div>
+    <div class="appearances" data-id="appearances" data-menuButton><div>Appearances</div></div>
+    <div class="link" data-id="link" data-menuButton><div>Link</div></div>
+    <div class="game" data-id="game" data-menuButton><div>Game</div></div>
   </div>
 
   <div id="currentContent">
-    <div class="pointer welcome" data-id="welcome" data-menuButton>Welcome</div>
   </div>
 
   <div id="message">
