--- a/profile.html
+++ b/profile.html
@@ -1,21 +1,57 @@
 <div id="profile">
-  <center><h3>PROFILE</h3></center>
-  <ul>
-	<li>My name is Jun Osawa.</li>
-	<li>I'm in <a href="http://www-nishio.ist.osaka-u.ac.jp/" target="_blank">Nisho-Lab.</a></li>
-	<div style="margin: 0px 50px;font-size: 22px;">Department of Multimedia Engineering, Graduate School of Information Science and Technology, Osaka University, JAPAN</div>
+  <center><h2>大澤 純 / Jun Osawa</h2></center>
 
-	<li>My date of birth is <a href="https://www.google.co.jp/search?q=1989/11/9" target="_blank">November 9th in 1989</a>.</li>
-	<li>I'm from <a href="https://www.google.co.jp/search?q=Chiba%20Japan" target="_blank"><img height="35" title="Chiba Japan" alt="Chiba Japan" src="img/chiba.jpg"></a>.</li>
-	<li>I play the <a href="https://www.google.co.jp/search?q=yamaha+ytr-9335chs" target="_blank"><img src="img/tp.png" height="35" alt="trumpet" title="trumpet"></a>.</li>
-	<li>I love <a href="https://www.google.co.jp/search?q=ぬこぬこ動画" target="_blank"><img src="img/cat.jpg" height="35" title="Cats"></a>.</li>
+  <h3>略歴 / Biography</h3>
+  <ul>
+    <li>2008年3月: 千葉県立木更津高等学校 卒業</li>
+    <li>2008年4月: 大阪大学工学部電子情報工学科 入学</li>
+    <li>2012年3月: 大阪大学工学部電子情報工学科 卒業</li>
+    <li>2012年4月: 大阪大学大学院情報科学研究科マルチメディア工学専攻博士前期課程 入学</li>
+    <li>2014年3月: 大阪大学大学院情報科学研究科マルチメディア工学専攻博士前期課程 卒業</li>
+    <li>2014年4月: 大阪大学大学院情報科学研究科マルチメディア工学専攻博士後期課程 在学</li>
   </ul>
 
-  <div align="center">
-    <a href="http://book.akahoshitakuya.com/u/369815" title="commojunさんの読書メーター"><img src="http://img.bookmeter.com/bp_image/g/370/369815.gif" border="0" alt="commojunさんの読書メーター"></a>
-
-    <a href="http://book.akahoshitakuya.com/u/369815" title="commojunの最近読んだ本"><img src="http://img.bookmeter.com/bp_image/125/370/369815.jpg" border="0" alt="commojunの最近読んだ本"></a>
-
-    <a href="http://book.akahoshitakuya.com/u/369815" title="commojunの今読んでる本"><img src="http://img.bookmeter.com/bp_image/125_now/370/369815.jpg" border="0" alt="commojunの今読んでる本"></a>
-  </div>
+  <h3>所属団体（履歴） / Orchestra</h3>
+  <ul>
+    <li><a href="http://kgwind.com/" target="_blank">King's Gambit Wind Orchestra</a></li>
+    <li><a href="http://fanfaria.wix.com/fanfariamusica" target="_blank">fanfaria musica*</a></li>
+    <li><a href="https://www.google.co.jp/search?q=K2+Winds">K2 Winds</a></li>
+    <li><a href="http://grwo.oboroduki.com/About_GRWO.html" target="_blank">GR Wind Orchestra</a></li>
+    <b>過去に所属 / Past</b>
+    <li><a href="http://kilauea.6.ql.bz/" target="_blank">KILAUEA Wind Orchestra</a></li>
+    <li><a href="http://pmab.nomaki.jp/" target="_blank">ペンギン村吹奏楽団</a></li>
+    <li><a href="https://www.facebook.com/BrowseBrassBand" target="_blank">Browse Brass Band</a></li>
+    <li>関西学生吹奏楽連盟</li>
+    <li>阪神国公立大学吹奏楽連盟</li>
+    <li><a href="http://ouwo.biz/" target="_blank">Osaka University Wind Orchestra</a></li>
+    <li>木更津高校音楽部</li>
+  </ul>
+  
+  <h3>その他 / Other</h3>
+  <ul>
+	<li>Birthday: <a href="https://www.google.co.jp/search?q=1989/11/9" target="_blank">1989/11/9</a></li>
+	<li>Favories: </li>
+    <div id="favorites">
+      <a href="https://www.google.co.jp/search?q=Chiba%20Japan" target="_blank">
+        <img title="Chiba Japan" alt="Chiba Japan" src="img/chiba.jpg">
+      </a>
+      <a href="https://www.google.co.jp/search?q=yamaha+ytr-9335chs" target="_blank">
+        <img src="img/tp.png" alt="trumpet" title="trumpet">
+      </a>
+      <a href="https://goo.gl/photos/kVhSCwkGktFQF78t9" target="_blank">
+        <img src="img/cat.jpg" title="Cats">
+      </a>
+    </div>
+  </ul>
+  
+  <h3>連絡先 / Contact</h3>
+  <ul>
+    <li><a href="img/contact.jpg" target="_blank">E-mail</a></li>
+    <li><a href="http://www.facebook.com/junpo.osawa" target="_blank">Facebook</a></li>
+    <li><a href="https://github.com/junpooooow" target="_blank">GitHub</a></li>
+    <li><a href="http://commojun.blog.fc2.com/" target="_blank">BLOG</a></li>
+    <li><a href="http://bookmeter.com/u/369815" target="_blank">読書メーター</a></li>
+    <li><a href="http://gamemeter.net/u/26639" target="_blank">ゲームメーター</a></li>
+  </ul>
+  
 </div>
