--- a/publication.html
+++ b/publication.html
@@ -1,8 +1,4 @@
 <div id="publication">
-<center><h3>PUBLICATION</h3></center>
-
-<div style="font-size: 18px;">
-
   <h3>国際会議 / International Conference</h3>
   <ol>
     <li> Seiya Mizuno, Jun Osawa, Takahiro Hara, and Shojiro Nishio, "A Preference Extraction Method Using Installed Applications and Their Descriptions," Int'l Workshop on Future Technologies for Smart Information Systems (FTSIS 2014), October 2014.</li>
@@ -10,6 +6,9 @@
   
 <h3>国内会議（査読付き） / National conference (refereed)</h3>
 <ol>
+  <li>
+    加藤 諒, 原 隆浩, 白川 真澄, 駒井 友香, 真嶋 温佳, 天方 大地, 大澤 純, 松尾 和哉, 横山 正浩, 佐崎 悠, 中村 達哉, 水野 聖也, 西尾 章治郎, "位置プライバシ問題の啓蒙のためのダミーによる位置曖昧化手法の体験システムの実装," マルチメディア通信と分散処理ワークショップ (DPSWS2014), pages 50-52, 2014年12月.
+  </li>
 <li>
 大澤 純, 岩田 麻祐, 原 隆浩, 西尾 章治郎, "こんてきすとモンスター：ユーザコンテキストを考慮したスマートフォン向けアプリケーション推薦システムの試作,"情報処理学会マルチメディア通信と分散処理ワークショップ(DPSWS 2013), pages 130-135, 2013年12月
 </li>
@@ -30,5 +29,4 @@
 <li>大澤 純, "学生プレゼンテーション賞," データ工学と情報マネジメントに関するフォーラム (DEIM2013) , 2013年3月.</li>
 <li>大澤 純, "ヤングリサーチャ賞," 情報処理学会マルチメディア, 分散, 協調とモバイル(DICOMO 2012)シンポジウム, 2012年7月.</li>
 </ol>
-</div><!-- font-size -->
 </div><!-- publication -->
