--- a/welcome.html
+++ b/welcome.html
@@ -1,4 +1,7 @@
-<div id="welcome" align="center">
-<h1>WELCOME!</h1>
-Access counter : <span id="count">???</span>
+<div id="welcome">
+  <span id="count">??</span> access
+
+<div class="information" data-deadline="20150603">
+  ここに最新情報を期限付きで表示する．
+</div>
 </div><!-- welcome -->
