--- a/work.html
+++ b/work.html
@@ -1,6 +1,4 @@
 <div id="work">
-<center><h3>WORK</h3></center>
-
-Under construction.....
+  <center><h2>こんてきすとモンスターの紹介</h2></center>
 
 </div><!-- work -->
