--- a/link.html
+++ b/link.html
@@ -1,11 +1,15 @@
 <div id="link">
-<center><h3>LINK</h3></center>
-
 <ul>
-	<li><a href="http://www-nishio.ist.osaka-u.ac.jp/">西尾研究室 / Nishio-Lab.</a></li>
-	<li><a href="http://www.ist.osaka-u.ac.jp/">大阪大学情報科学研究科<br> / Graduate School of IST</a></li>
-	<li><a href="http://www.osaka-u.ac.jp/">大阪大学 / Osaka Univ.</a></li>
-	<li><a href="http://commojun.com/">Commojun's Web</a></li>
+	<li><a href="http://www-nishio.ist.osaka-u.ac.jp/" data-string="link-nishioLab">Nishio-Lab.</a></li>
+	<li><a href="http://www.ist.osaka-u.ac.jp/" data-string="link-ist">Graduate School of IST</a></li>
+	<li><a href="http://www.osaka-u.ac.jp/" data-string="link-ou">Osaka University</a></li>
+    <li><a href="http://www.chiba-c.ed.jp/kisarazu-h/">Kisarazu High School</a></li>
+    <br>
+    <li><a href="http://kgwind.com/">King's Gambit Wind Orchestra</a></li>
+    <li><a href="http://fanfaria.wix.com/fanfariamusica">fanfaria musica*</a></li>
+    <li><a href="http://grwo.oboroduki.com/About_GRWO.html">GR Wind Orchestra</a></li>
+    <li><a href="http://kilauea.6.ql.bz/">KILAUEA Wind Orchestra</a></li>
+    <li><a href="http://ouwo.biz/">Osaka University Wind Orchestra</a></li>
 </ul>
 
 </div><!-- link -->
