--- a/work.html
+++ b/work.html
@@ -1,4 +1,27 @@
 <div id="work">
   <center><h2>こんてきすとモンスターの紹介</h2></center>
+  <p>こんてきすとモンスターは，スマートフォンのユーザが普段からどのようにスマートフォンを利用しているのかを調査することを目的として，ユーザの身の回りの状況に関する情報を収集するスマートフォン向けのアプリケーションです．本アプリで収集した情報は，スマートフォンにまつわる様々な研究に役立てられます．本アプリは，調査実験のためのアプリケーションとしてではなく，楽しみながら毎日利用できるような様々な工夫が凝らしてあります．興味を持たれた方は，ぜひダウンロードしてご利用ください．</p>
 
+  <h3>あなたの生活行動を記録しよう</h3>
+  <p>こんてきすとモンスターは，あなたの生活行動を記録する「ライフログアプリ」です．あなたの今いる場所，一緒にいる人，やっている事，今の気分など，身の回りの状況に関する情報を記録することができます．そして，これまでに入力した情報は様々な観点から振り返ることができます．振り返りを通して，あなたがこれまであまり意識していなかった生活パターンに気がつくかもしれません．</p>
+
+  <h3>モンスターを育成しよう</h3>
+  <p>こんてきすともンスターは，個性豊かなもンスターを育成するゲームアプリです．登場するモンスターたちは，「あなたの身の回りの状況」をえさとして食べることで成長していきます．定期的にえさをあげて，大切に育ててあげてください．</p>
+
+  <h3>ダウンロード</h3>
+
+  <p>こんてきすとモンスターは，iOS版とAndroid OS版をそれぞれ公開中です！お使いのスマートフォンに合わせたバージョンをご利用ください！</p>
+
+  <div class="work-badges">
+    <div><a href="https://geo.itunes.apple.com/jp/app/kontekisutomonsuta/id985997467?mt=8&uo=6" target="itunes_store">
+      <img src="img/work/apple.png" class="apple-badge">
+    </a></div>
+    <div><a href="https://play.google.com/store/apps/details?id=com.commojun.contextcollector2" target="_blank">
+      <img src="img/work/google.png" class="google-badge">
+    </a></div>
+  </div>
+
+  <p>最新情報は<a href="https://www.facebook.com/contextmonsters">Facebook</a>にて随時告知を行っています！</p>
+
+  <p>※本アプリで収集した情報は，学術的研究を目的として利用されることがあります．</p>
 </div><!-- work -->
