--- a/welcome.html
+++ b/welcome.html
@@ -1,7 +1,15 @@
 <div id="welcome">
   <span id="count">??</span> access
 
-<div class="information" data-deadline="20150603">
-  ここに最新情報を期限付きで表示する．
-</div>
+  <dl>
+    <dt>2015/06/12</dt>
+    <dd>Webページのリニューアルをしました．<br>
+      hogeeeeaaaa</dd>
+
+    <dt>2015/06/08</dt>
+    <dd>Webページのリニューアルをしました．<br>
+    hogeeeeaaaa</dd>
+
+  </dl>
+
 </div><!-- welcome -->
