--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <script type="text/javascript">
      google.load("jquery", "1");
     </script>
-    <script type="text/javascript" src="lib/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="lib/jquery.vgrid.min.js"></script>
+    <script type="text/javascript" src="lib/moment.js"></script>
+    
     <script type="text/javascript" src="js/main.js"></script>
+    <!-- 各jsファイルの読み込み -->
+    <script type="text/javascript" src="js/profile.js"></script>
     <!-- game.htmlで使用 -->
 	<script language="JavaScript" type="text/javascript" src="js/game.js"></script>
 	<script language="JavaScript" type="text/javascript" src="js/mayo1.js"></script>
