出演追加　ゲームデバッグ　最新情報など追加　これで一段落

--- a/appearances.html
+++ b/appearances.html
@@ -1,3 +1,14 @@
 <div id="appearances">
-  演奏会等の出演情報を表示します．
+  <div align="center"><h2>今後の出演予定 / COMING</h2></div>
+  <div id="appearances-coming">
+    出演予定は今のところありません．
+  </div>
+  <div align="center"><h2>過去の出演歴 / PAST</h2></div>
+  <div id="appearances-past">
+    
+  </div>
+
+  <div id="appearances-morePast">
+    
+  </div>
 </div>
