--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/main.js"></script>
     <!-- 各jsファイルの読み込み -->
     <script type="text/javascript" src="js/profile.js"></script>
+    <script type="text/javascript" src="js/appearances.js"></script>
     <!-- game.htmlで使用 -->
 	<script language="JavaScript" type="text/javascript" src="js/game.js"></script>
 	<script language="JavaScript" type="text/javascript" src="js/mayo1.js"></script>
@@ -29,12 +30,12 @@
 
 
   <div align="center">
-
-    <h1 style="margin-top:0">Commojun's web</h1>
-
+    <h1 style="margin:0">Commojun's web</h1>
   </div><!-- center -->
+  <div id="access-counter">
+    <span id="count">??</span> access
+  </div>
 
-  
   <div id="navi">
     <div class="welcome" data-id="welcome" data-menuButton><div>Welcome</div></div>
     <div class="profile" data-id="profile" data-menuButton><div>Profile</div></div>
