--- a/welcome.html
+++ b/welcome.html
@@ -1,15 +1,5 @@
 <div id="welcome">
-  <span id="count">??</span> access
-
-  <dl>
-    <dt>2015/06/12</dt>
-    <dd>Webページのリニューアルをしました．<br>
-      hogeeeeaaaa</dd>
-
-    <dt>2015/06/08</dt>
-    <dd>Webページのリニューアルをしました．<br>
-    hogeeeeaaaa</dd>
-
+  <div align="center"><h2>最新情報 / New infomation</h2></div> 
+  <dl id="welcome-newinfo">
   </dl>
-
 </div><!-- welcome -->
