DICOMO業績，GR告知追加

--- a/appearances/2015.html
+++ b/appearances/2015.html
@@ -1,4 +1,24 @@
 <div id="appearances-2015">
+  <div data-date="2015-11-15" class="stage">
+    <h3>Giocoso Raid Wind Orchestra 5th Concert</h3>
+    <div align="center">
+      <img src="./img/appearances/20151115.jpg" class="flyer"/>
+    </div>
+    <dl>
+      <dt>日時</dt>
+      <dd>2015年11月15日（日）<br>
+      開場：14時30分 / 開演：15時（予定）</dd>
+      <dt>プログラム</dt>
+      <dd>高度な技術への指標　（河辺公一）<br />
+        吹奏楽のための詩曲「はてしなき大空への賛歌」　（八木澤教司）<br />
+        「GR」よりシンフォニック．セレクション　（天野正道）<br />
+        おほなゐ　～1995.1.17 阪神淡路大震災へのオマージュ～　</dd>
+      <dt>場所</dt>
+      <dd>箕面市文化会館 グリーンホール</dd>
+      <dt><a href="http://grwo.oboroduki.com/concert.html" target="_blank">リンク</a></dt>
+    </dl>
+  </div>
+  
   <div class="stage" data-date="2015-08-29">
     <h3>fanfaria musica* 4th</h3>
     <div align="center">
