--- a/publication.html
+++ b/publication.html
@@ -6,6 +6,7 @@
   
 <h3>国内会議（査読付き） / National conference (refereed)</h3>
 <ol>
+  <li>川上 慶士, 大澤 純, 原 隆浩, 西尾 章治郎, "ゲーミフィケーションに基づくコンテキスト収集システムにおけるライフログ機能の導入とその効果の検証," 情報処理学会マルチメディア，分散，協調とモバイル(DICOMO2015)シンポジウム論文集, pages 945-952, 2015年.</li>
   <li>
     加藤 諒, 原 隆浩, 白川 真澄, 駒井 友香, 真嶋 温佳, 天方 大地, 大澤 純, 松尾 和哉, 横山 正浩, 佐崎 悠, 中村 達哉, 水野 聖也, 西尾 章治郎, "位置プライバシ問題の啓蒙のためのダミーによる位置曖昧化手法の体験システムの実装," マルチメディア通信と分散処理ワークショップ (DPSWS2014), pages 50-52, 2014年12月.
   </li>
