docker化して、phpとかが動かなくなったので応急処置

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset=UTF-8>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css" type="text/css" media="screen" />
-    <script src="http://www.google.com/jsapi"
+    <script src="https://www.google.com/jsapi"
             type="text/javascript"></script>
     <script type="text/javascript">
      google.load("jquery", "1");
@@ -32,9 +32,6 @@
   <div align="center">
     <h1 style="margin:0">Commojun's web</h1>
   </div><!-- center -->
-  <div id="access-counter">
-    <span id="count">??</span> access
-  </div>
 
   <div id="navi">
     <div class="welcome" data-id="welcome" data-menuButton><div>Welcome</div></div>
