--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset=UTF-8>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css" type="text/css" media="screen" />
-    <script language="JavaScript" type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript">
-     google.load("jquery", "1");
-    </script>
+    <script language="JavaScript" type="text/javascript" src="lib/jquery-3.7.1.min.js"></script>
     <script type="text/javascript" src="lib/moment.js"></script>
     
     <script type="text/javascript" src="js/main.js"></script>
